--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <input type="text" id="txtTask">
             <button class="btn"
             onclick="registerTask();">Add</button>
+            <button class="btn"
+            onclick="save();">save</button>
         </div>
     </header>
     <main>
@@ -25,7 +27,7 @@
         </ul>
     </main>
 
-    
+
     <script src="app.js"></script>
 </body>
 </html>
